objects/Quote_Automation_Cycle__c.object
<CustomObject>
    <fields>
        <fullName>Batch_ID__c</fullName>
        <label>Batch ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cohrot__c</fullName>
        <label>Cohrot</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cycle_Status__c</fullName>
        <label>Cycle Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <label>Job Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_status__c</fullName>
        <label>Job status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Quote Automation Cycle</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Market_Segment__c</columns>
        <columns>Cohrot__c</columns>
        <columns>Cycle_Status__c</columns>
        <columns>Job_Description__c</columns>
        <columns>Job_Name__c</columns>
        <columns>Job_status__c</columns>
        <columns>Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Batch-{0}</displayFormat>
        <label>Batch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Automation Cycles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>